Fix: Add z-index to Flibox Back to work on Chrome

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,6 +184,7 @@ max-width:100%;
     -ms-backface-visibility: hidden;  
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
+    z-index: 1;
 }
 
 .flip-box-front {
